# lingtai-kernel

./: .gitignore  ANATOMY.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRACT.md  CONTRIBUTING.md  GLOSSARY.md  LICENSE  MANIFEST.in  README.md  README.wen.md  README.zh.md  RELEASING.md  REVIEW-pr11.md  SECURITY.md  SUPPORT.md  docs.yaml  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: kernel-windows-pr.yml  shell-windows-pr.yml  wheels.yml  windows-smoke.yml
crates/lingtai-search-sidecar/: README.md
dev-guide-skill/: SKILL.md
discussions/: headless-runtime-contract.md  imap-stale-keepalive.md  library-skills-rename-migration.md  llm-hang-watchdog-patch.md  notification-filesystem-implementation-patch.md  post-tool-continuation-recovery-contract.md  prompt-architect-collaboration.md  secondary-tool-call-experiment-deepseek-v4-pro.jsonl  secondary-tool-call-experiment-deepseek-v4-pro.md  secondary-tool-call-experiment-mimo-pro.jsonl  secondary-tool-call-experiment-mimo-pro.md  secondary-tool-call-experiment.jsonl  secondary-tool-call-experiment.md  secondary-tool-call-provider-followup.md
docs/: intrinsics-draft.md
docs/plans/: 2026-04-30-anatomy-tree-restructure.md  2026-05-12-knowledge-v2-file-backed.md  2026-06-25-fsutil-migration.md  2026-07-14-powershell-adapter-readiness.md
docs/readmes/: README.wen.md  README.zh.md
docs/references/: acknowledgements.md  claude-code-guide.md  codex-http-anatomy-investigation.md  licc-notification-wake-runbook.md  lifecycle-clock.md  runtime-vs-agent-session-objects.md  windows-support-status.md  windows-support.md
docs/sdk/: architecture-foundation.md
docs/specs/: 2026-04-28-imap-addon-hardening.md
docs/superpowers/plans/: 2026-03-19-kernel-i18n.md  2026-04-23-tool-pairing-invariant.md  2026-06-17-lingtai-sdk-public-facade.md
docs/superpowers/specs/: 2026-04-20-library-redesign-design.md  2026-04-20-meta-block-infra-design.md  2026-04-21-pseudo-agent-outbox-subscription-design.md  2026-04-22-agent-performed-molt-design.md  2026-04-23-tool-pairing-invariant-design.md  2026-04-27-daemon-fs-refactor-design.md  2026-04-28-presets-design.md  2026-04-29-presets-description-object-design.md
experimental/lingtai-search-sidecar/: Cargo.toml  README.md
experimental/lingtai-search-sidecar/src/: main.rs
migration/: migration.md
presets/: kimi-coding.json
reports/: bash-async-relaunch-durability-20260713.html  custom-openai-wire-api-service-tier-20260709.html  custom-openai-wire-api-service-tier-pr-body.md  custom-openai-wire-api-service-tier-self-review.md  feishu-addon-floor-20260612.html  issue256-post-molt-delegation-reminder-explainer.html  pr268-post-molt-delegation-reminder-explainer.html  pr283-daemon-group-peer-send-v0-explainer.html  pr293-pre-send-hard-gate-explainer.html  secondary-telegram-args-20260609.html  t3-relaunch-watcher-redaction-explainer.html
reports/kernel-release-v0.13.0-20260620/: commits.md  prs.md  release-body.md
reports/kernel-release-v0.13.1-20260621/: commits.md  prs.md  release-body.md
reports/kernel-release-v0.14.1-20260623/: commits.md  release-body.md
reports/kernel-release-v0.15.2-20260627/: commits.md  release-body.md  release-report.md
scripts/: bench_agent_session_rebuild.py  check_anatomy_drift.py  check_docs_governance.py  generate_release_manifest.py  publish_release_assets.py  secondary_tool_call_experiment.py  sync_gitee_mirror.py
scripts/lib/: release_manifest.py
src/lingtai/: ANATOMY.md  CONTRACT.md  __init__.py  agent.py  cli.py  config_resolve.py  init.jsonc  init_reader.py  init_schema.py  mcp_catalog.json  network.py  preset_connectivity.py  presets.py  venv_resolve.py
src/lingtai/adapters/: __init__.py  avatar_launcher.py  bash.py  bash_process.py  bash_state_lock.py  lifecycle_clock.py  process_scan.py  refresh_watcher.py  shell.py  shell_process.py  shell_state_lock.py  workdir_lease.py
src/lingtai/auth/: ANATOMY.md  codex.py  codex_account_source.py  codex_pool.py
src/lingtai/capabilities/: ANATOMY.md  __init__.py  avatar.py  codex.py  email.py  library.py  psyche.py
src/lingtai/core/: __init__.py  email_contract.py
src/lingtai/i18n/: en.json  (+2 more)
src/lingtai_kernel/: ANATOMY.md  _frontmatter.py  agent_session.py  base_agent.py  config.py  config_resolve.py  context_serializer.py  handshake.py  llm_utils.py  message.py  meta_block.py  notifications.py  preset_connectivity.py  presets.py  process_control.py  prompt.py  prompt_catalog.py  provider_quota.py  secondary_tools.py  sent_message_tracker.py  session.py  soul_prompt_wen.md  state.py  tc_inbox.py  time_veil.py  token_ledger.py  tool_executor.py  tool_result_summary.py  trace_redaction.py  workdir.py
src/lingtai_kernel.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/lingtai_sdk/: ANATOMY.md  __init__.py  client.py  errors.py  mcp.py  native.py  options.py  query.py  runtime.py  session.py  tools.py
src/stoai_kernel/: base_agent.py  config.py  manifesto.md  manifesto_zh.md  prompt.py  state.py
src/tools/: ANATOMY.md  __init__.py  glossary_validator.py  registry.py
tests/: CONTRACT.md  _agent_dir_helpers.py  _agent_presence_helpers.py  _daemon_helpers.py  _detached_cli_parent.py  _fake_codex_app_server.py  _fake_codex_cli.py  _fake_llm_adapter.py  _fake_resume_cli.py  _lifecycle_clock_helpers.py  _manager_detached_parent.py  _migration_workspace_helpers.py  _notification_helpers.py  _notification_store_helpers.py  _refresh_watcher_helpers.py  _snapshot_helpers.py  _tool_surface_dump.py  _workdir_lease_helpers.py  codex  conftest.py  integration_test_claude_code.py  opencode  test_account.py  test_activate_preset.py  test_active_stuck_watchdog.py  test_adapter_registry.py  test_addon_api.py  test_addon_imap_account.py  test_addon_imap_live.py  test_addon_imap_manager.py  test_addon_imap_migrate.py  test_addon_imap_watermark.py  test_addon_telegram_manager.py  test_addons.py  test_aed_recovery.py  test_aed_tool_pairing.py  test_agent.py  test_agent_capabilities.py  test_agent_config_hydration.py  test_agent_meta_guidance.py  (+354 more)
tools/: check_anatomy_drift.py
(+960 files in other folders)
