[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stoai-kernel"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []
description = "Minimal agent kernel — think, communicate, remember, host tools"
license = "MIT"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
