[build-system]
# ``wheel`` is required because setup.py overrides ``bdist_wheel`` to mark
# the wheel as platform-specific when the bundled Rust sidecar binary is
# present. See setup.py for the build-time bundle / fallback logic.
requires = ["setuptools>=68.0", "wheel>=0.41"]
build-backend = "setuptools.build_meta"

[project]
name = "lingtai"
version = "0.17.1"
description = "Generic research agent with intrinsic tools and MCP-compatible extension interface"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27",
    "openai>=1.0",
    "anthropic>=0.40",
    "google-genai>=1.0",
    "mcp>=1.10.0",
    "ddgs>=7.0",
    "trafilatura>=2.0",
    "filelock>=3.0",
    "pyyaml>=6.0",
    "packaging>=24.0",
    # Curated MCP server implementations live in this distribution under
    # `lingtai.mcp_servers.*` so the catalog can launch them with `python -m`
    # without separate PyPI wheels. Keep their third-party runtime dependencies
    # here.
    "imapclient>=3.0.0",
    "msal>=1.37.0",
    "lark-oapi>=1.4.0",
    "cryptography>=42.0.0",
    "qrcode>=7.4.0",
    "faster-whisper>=1.0.0",
]

[project.scripts]
lingtai-agent = "lingtai.cli:main"
lingtai-imap = "lingtai.mcp_servers.imap.__main__:main"
lingtai-telegram = "lingtai.mcp_servers.telegram.__main__:main"
lingtai-feishu = "lingtai.mcp_servers.feishu.__main__:main"
lingtai-wechat = "lingtai.mcp_servers.wechat.__main__:main"
lingtai-wechat-bootstrap = "lingtai.mcp_servers.wechat.login:_bootstrap_main"
lingtai-whatsapp = "lingtai.mcp_servers.whatsapp.__main__:main"
lingtai-cloud-mail = "lingtai.mcp_servers.cloud_mail.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["lingtai*"]
exclude = [
    "lingtai_imap*",
    "lingtai_telegram*",
    "lingtai_feishu*",
    "lingtai_wechat*",
    "lingtai_whatsapp*",
    "lingtai.addons*",
]

[tool.setuptools.package-data]
"lingtai.kernel" = ["i18n/*.json"]
# Consolidated tool packages: i18n catalogs, per-tool JSON policy/data files
# (e.g. lingtai/tools/bash/bash_policy.json), and every tool manual tree. Without
# these the wheel installs the tool code but silently drops its data assets.
"lingtai.tools" = [
    "i18n/*.json",
    "*/*.json",
    "*/manual/**/*",
    # Per-tool contract documents — one src/lingtai/tools/<tool>/CONTRACT.md per
    # built-in tool. The runtime loads these to surface each tool's invariants;
    # omitting the glob ships the tool code while silently dropping all 18
    # contracts from the wheel.
    "*/CONTRACT.md",
    # Per-tool glossary resources — exactly glossary-{en,zh,wen}.md per
    # first-party package (18 packages × 3 languages = 54 files). The
    # renderer loads them via importlib.resources to append localized
    # terminology bodies to each tool's ## tools description.
    "*/glossary-en.md",
    "*/glossary-zh.md",
    "*/glossary-wen.md",
]
lingtai = [
    "mcp_catalog.json",
    "init.jsonc",
    "intrinsic_skills/*/**/*",
    # Prompt-source anatomy at the prompts/ root.
    "prompts/*.md",
    # One directory per prompt section under prompts/ (parallel to guidance/):
    # `<section>/<section>.md` bodies (principle/substrate/procedures) and
    # `<section>/<section>.yaml` semantic definitions (including YAML-only
    # definitions for generated/injected sections such as
    # covenant/meta_guidance/comment/tools/... that have no body).
    "prompts/*/*.md",
    "prompts/*/*.yaml",
    # Runtime-guidance catalog — INDEX.md + one <id>.md per guidance section,
    # now nested under the meta_guidance section it generates (one level deeper
    # than the `prompts/*/*.md` glob above, so it needs its own entry).
    # Replaces the legacy prompts/guidance.json packaged resource.
    "prompts/meta_guidance/catalog/*.md",
    # Rust sidecar binary bundled at build time by setup.py — present in
    # platform-specific wheels, absent in pure-Python sdist fallback
    # builds. The glob is non-strict, so missing files don't fail builds.
    "bin/lingtai-search-sidecar",
    "bin/lingtai-search-sidecar.exe",
]
"lingtai.mcp_servers.telegram" = ["notification_header.md", "SKILL.md", "reference/**/*", "assets/**/*"]
# The Telegram-owned programmable Task Card unit is its own subpackage, so its
# manual and architecture documents are NOT covered by the parent telegram glob
# above (package-data globs do not recurse into subpackages). Ship the nested
# SKILL.md plus its paired ANATOMY.md/CONTRACT.md explicitly, or the wheel
# installs the code and silently drops those documents.
"lingtai.mcp_servers.telegram.task_card" = ["SKILL.md", "ANATOMY.md", "CONTRACT.md"]
"lingtai.mcp_servers.feishu" = ["notification_header.md", "SKILL.md", "reference/**/*", "assets/**/*"]
"lingtai.mcp_servers.wechat" = ["notification_header.md", "SKILL.md", "reference/**/*", "assets/**/*"]
"lingtai.mcp_servers.whatsapp" = ["notification_header.md", "SKILL.md", "reference/**/*", "assets/**/*"]
"lingtai.mcp_servers.imap" = ["SKILL.md", "reference/**/*", "assets/**/*"]
"lingtai.mcp_servers.cloud_mail" = ["SKILL.md", "reference/**/*", "assets/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
